Functional user registration
