# docs/swagger.json
@@ -14,7 +14,7 @@
     "paths": {
         "/register": {
             "post": {
-                "description": "Register a new user",
+                "description": "RegisterHandler a new user",
                 "consumes": [
                     "application/json"
                 ],
@@ -24,7 +24,7 @@
                 "tags": [
                     "users"
                 ],
-                "summary": "Register a new user",
+                "summary": "RegisterHandler a new user",
                 "parameters": [
                     {
                         "description": "User",
@@ -111,9 +111,9 @@
                 "summary": "Get a vault by ID",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Vault ID",
-                        "name": "id",
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
                         "in": "path",
                         "required": true
                     }
